userlabs/config/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: userlabs-network-policy
spec:
  podSelector:
    matchLabels:
      user-jupyterlab: "true"
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: jupyter
          podSelector:
            matchExpressions:
            - { key: component, operator: In, values: [hub, proxy] }
      ports:
        - port: 8443
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
